--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
@@ -21,29 +21,21 @@
 <p>@L["SendPasswordResetLink_Information"]</p>
 
 <div class="alert alert-info d-flex align-items-center" role="alert">
-    @if (Model.IsUserNameEnabled)
-    {
-        <div>
-            Please type your user name or your email address
-        </div>
-    }
-    else
-    {
-        <div>
-            Please type your email address
-        </div>
-    }
+    Please check your information and submit it
 </div>
 
 <form method="post">
+    <input asp-for="Input.IsUsingEmailAddress" type="hidden" autocomplete="off" />
 
-    @if (Model.IsUserNameEnabled)
+    @if (Model.Input.IsUsingEmailAddress)
     {
-        <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" />
+        <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" type="email"
+               label="@L["DisplayName:Email"].Value" autocomplete="email" />
     }
     else
     {
-        <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" label="@L["DisplayName:Email"].Value" />
+        <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true"
+               label="@L["DisplayName:UserName"].Value" autocomplete="username" />
     }
 
     <div class="d-grid gap-2">
@@ -52,8 +44,10 @@
             <span class="spinner-box"></span>
         </abp-button>
 
-        <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate" name="Action" value="Cancel" class="btn-lg mt-3">
+        <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
+                    name="Action" value="Cancel" class="btn-lg mt-3">
             @L["Back"]
         </abp-button>
     </div>
 </form>
+
