--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -59,9 +59,14 @@
         </div>
     }
 
-    <div class="mb-3">
+    <div class="mb-3" id="password-wrapper">
         <label asp-for="Input.Password" class="form-label"></label>
-        <input asp-for="Input.Password" class="form-control" data-auto-focus="true" autocomplete="current-password" />
+        <div class="input-group">
+            <input asp-for="Input.Password" class="form-control" data-auto-focus="true" autocomplete="current-password" />
+            <button type="button" class="toggle-password btn btn-outline-secondary">
+                <i class="toggle-icon fa fa-eye"></i>
+            </button>
+        </div>
         <span asp-validation-for="Input.Password" class="text-danger"></span>
     </div>
 
