--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -40,13 +40,13 @@
                 <div class="mb-3 me-3">
                     <input type="radio" class="btn-check" name="Resolution.OptionId"
                    id="Resolution-By-Email" value="1" autocomplete="off" checked>
-                    <label class="btn btn-outline-dark" for="Resolution-By-Tenant">Email Address</label>
+                    <label class="btn btn-outline-dark" for="Resolution-By-Email">Email Address</label>
                 </div>
 
                 <div class="mb-3">
                     <input type="radio" class="btn-check" name="Resolution.OptionId"
                    id="Resolution-By-Name" value="2" autocomplete="off">
-                    <label class="btn btn-outline-dark" for="Resolution-By-Email">User Name</label>
+                    <label class="btn btn-outline-dark" for="Resolution-By-Name">User Name</label>
                 </div>
             </div>
 
@@ -54,7 +54,8 @@
                 <abp-button type="submit" button-type="Primary" name="Action"
                     value="Resolution" class="btn-block btn-lg mt-3">
                     @L["Continue"]
-                    <span class="spinner-box"></span>
+                    <span class="spinner-box">
+                    </span>
                 </abp-button>
             </div>
         </form>
@@ -74,7 +75,8 @@
             <div class="d-grid gap-2">
                 <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
                     @L["Continue"]
-                    <span class="spinner-box"></span>
+                    <span class="spinner-box">
+                    </span>
                 </abp-button>
                 <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
                     name="Action" value="Cancel" class="btn-lg mt-3">
@@ -124,7 +126,8 @@ else
         <div class="d-grid gap-2">
             <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
                 @L["Continue"]
-                <span class="spinner-box"></span>
+                <span class="spinner-box">
+                </span>
             </abp-button>
         </div>
     </form>
