--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivation.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivation.cshtml
@@ -55,7 +55,7 @@ else
 }
 
 <a abp-button="Primary" asp-page="./Login"
-   asp-all-route-data="@(new Dictionary<string, string> {{"returnUrl", Model.ReturnUrl}, {"returnUrlHash", Model.ReturnUrlHash}})">
+   asp-all-route-data="@(new Dictionary<string, string> {{"returnUrl", Model.ReturnUrl ?? string.Empty}, {"returnUrlHash", Model.ReturnUrlHash ?? string.Empty}})">
     &larr; @L["BackToLogin"]
 </a>
 
