--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccesst.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LogoutSuccesst.cshtml
@@ -6,10 +6,10 @@
 @using Volo.Abp.AspNetCore.Mvc.UI.MultiTenancy.Localization
 @using Volo.Abp.Settings
 @using AspNetCore.ReCaptcha
-@model PolpAbp.Presentation.Account.Web.Pages.Account.LoggedOutModel
+@model PolpAbp.Presentation.Account.Web.Pages.Account.LogoutSuccessModel
 @{
-    ViewBag.Title = "Successful Logout";
-    ViewBag.Description = "Displays the success message after you logs out of the system.";
+    ViewBag.Title = "Logout Success";
+    ViewBag.Description = "Displays the success message after a user logs out of the system.";
 }
 
 @inject IHtmlLocalizer<AccountResource> L
