--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ExternalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ExternalLogin.cshtml
@@ -38,7 +38,7 @@
 
 <!-- todo: Add a condition -->
 <div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Help links</h6>
+    <h6>Helpful links</h6>
     <ul>
         <!-- todo: Add a link for the member registration -->
         <li>
