--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -48,7 +48,7 @@
 
 <!-- todo: Add a condition -->
 <div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Help links</h6>
+    <h6>Helpful links</h6>
     <ul>
         <li>
             Already a member? Please <a class="btn btn-link fst-italic" href="@Url.Page("./Login")">@L["Login"]</a>
