--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
@@ -134,7 +134,7 @@ else
 }
 
 <div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Help links</h6>
+    <h6>Helpful links</h6>
     <ul>
         <li>
             <a class="btn btn-link fst-italic" href="@Url.Page("./Register")">@L["Register"]</a>
