--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/LocalLogin.cshtml
@@ -93,7 +93,7 @@
 
 <!-- todo: Add a condition -->
 <div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Help links</h6>
+    <h6>Helpful links</h6>
     <ul>
         <li>
             <a class="btn btn-link fst-italic" href="@reActivationLink">@L["ResendActivationLink"]</a>
