--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
@@ -35,7 +35,7 @@
 
 <!-- todo: Add a condition -->
 <div class="d-flex flex-column align-items-start mt-5 mb-3">
-    <h6>Help links</h6>
+    <h6>Helpful links</h6>
     <ul>
         <li>
             <a class="btn btn-link fst-italic" href="@Url.Page("./TwoFactorRequest")">Request two factor code</a>
