Forgot password support more cases

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
@@ -10,7 +10,7 @@
 @inject IHtmlLocalizer<AccountResource> L
 
 @{
-    ViewBag.Title = "Resets Your Password";
+    ViewBag.Title = "Gets Back Your Password";
     ViewBag.Description = "Requests to get a password reset link if you forgets your password.";
 }
 
@@ -25,18 +25,9 @@
 </div>
 
 <form method="post">
-    <input asp-for="Input.IsUsingEmailAddress" type="hidden" autocomplete="off" />
 
-    @if (Model.Input.IsUsingEmailAddress)
-    {
-        <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" type="email"
+    <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" type="email"
                label="@L["DisplayName:Email"].Value" autocomplete="email" />
-    }
-    else
-    {
-        <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true"
-               label="@L["DisplayName:UserName"].Value" autocomplete="username" />
-    }
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
