Resend activation link

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
@@ -26,7 +26,7 @@
 
 <form method="post">
 
-    <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" type="email"
+    <abp-input asp-for="Input.EmailAddress" auto-focus="true" type="email"
                label="@L["DisplayName:Email"].Value" autocomplete="email" />
 
     <div class="d-grid gap-2">
