--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLink.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResendActivationLink.cshtml
@@ -25,18 +25,8 @@
 
 <form method="post">
 
-    <input asp-for="Input.IsUsingEmailAddress" type="hidden" autocomplete="off" />
-
-    @if (Model.Input.IsUsingEmailAddress)
-    {
-        <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true" type="email"
+    <abp-input asp-for="Input.EmailAddress" auto-focus="true" type="email"
                label="@L["DisplayName:Email"].Value" autocomplete="email" />
-    }
-    else
-    {
-        <abp-input asp-for="Input.UserNameOrEmailAddress" auto-focus="true"
-               label="@L["DisplayName:UserName"].Value" autocomplete="username" />
-    }
 
     <div class="d-grid gap-2">
         <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
