--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
@@ -10,12 +10,12 @@
 @inject IHtmlLocalizer<AccountResource> L
 @inject IHtmlLocalizer<AbpUiMultiTenancyResource> M
 @{
-    ViewBag.Title = "Locates Your Account Information";
-    ViewBag.Description = "Finds out your account information with your organization name or your email.";
+    ViewBag.Title = "Locates Your Organization Information";
+    ViewBag.Description = "Finds out your account information with your organization name.";
 }
 
 <h4 class="mb-4 fw-semibold">
-    Locating your information
+    Locating your organization
 </h4>
 
 @if (Model.TenantList != null && Model.TenantList.Count > 0)
@@ -40,78 +40,16 @@
         </div>
     </form>
 }
-else if (Model.Resolution.OptionId <= 0 || Model.Resolution.OptionId > 2)
-{
-    <div class="alert alert-info d-flex align-items-center" role="alert">
-        <div>
-            Please choose one way to locate your organization
-        </div>
-    </div>
-
-    <form method="post">
-
-        <div class="d-flex flex-wrap">
-            <div class="mb-3 me-3">
-                <input type="radio" class="btn-check" name="Resolution.OptionId"
-                   id="Resolution-By-Tenant" value="1" autocomplete="off" checked>
-                <label class="btn btn-outline-dark" for="Resolution-By-Tenant">Organization Name</label>
-            </div>
-
-            <div class="mb-3">
-                <input type="radio" class="btn-check" name="Resolution.OptionId"
-                   id="Resolution-By-Email" value="2" autocomplete="off">
-                <label class="btn btn-outline-dark" for="Resolution-By-Email">My Email Address</label>
-            </div>
-        </div>
-
-        <div class="d-grid gap-2">
-            <abp-button type="submit" button-type="Primary" name="Action" value="Resolution" class="btn-block btn-lg mt-3">
-                @L["Continue"]
-                <span class="spinner-box"></span>
-            </abp-button>
-        </div>
-    </form>
-}
-else if (Model.Resolution.OptionId == 1)
+else
 {
     <div class="alert alert-info d-flex align-items-center" role="alert">
         Please type your organization name
     </div>
 
     <form method="post">
-        <input asp-for="Input.IsUsingEmailAddress" type="hidden" value="false" autocomplete="off" />
-        <abp-input asp-for="Input.TenantOrEmailAddress" auto-focus="true"
+
+        <abp-input asp-for="Input.TenantName" auto-focus="true"
                label="@L["DisplayName:TenantName"].Value" autocomplete="organization" />
-
-        @if (Model.IsRecaptchaEnabled)
-        {
-            <div class="mb-3">
-                @Html.ReCaptcha()
-            </div>
-        }
-
-        <div class="d-grid gap-2">
-            <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-block btn-lg mt-3">
-                @L["Continue"]
-                <span class="spinner-box"></span>
-            </abp-button>
-            <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="btn-lg mt-3">
-                @L["Back"]
-            </abp-button>
-        </div>
-    </form>
-}
-else
-{
-    <div class="alert alert-info d-flex align-items-center" role="alert">
-        Please type your email address
-    </div>
-
-    <form method="post">
-        <input asp-for="Input.IsUsingEmailAddress" type="hidden" value="true" autocomplete="off" />
-        <abp-input asp-for="Input.TenantOrEmailAddress" auto-focus="true" type="email"
-               label="@L["DisplayName:EmailAddress"].Value" autocomplete="email" />
 
         @if (Model.IsRecaptchaEnabled)
         {
