Drop the use of btn-lg

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ExternalLogin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ExternalLogin.cshtml
@@ -28,7 +28,7 @@
     @{
         foreach (var s in Model.SsoProviders)
         {
-            <a class="btn btn-primary btn-lg" href="@Url.Page(s.LoginPage)">
+            <a class="btn btn-primary" href="@Url.Page(s.LoginPage)">
                 @s.DisplayName
                 <span class="spinner-box"></span>
             </a>
