--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/FindUser.cshtml
@@ -29,12 +29,12 @@
         <abp-select asp-for="Selection.Id" label="@M["Tenant"].Value" />
 
         <div class="d-grid gap-2">
-            <abp-button type="submit" button-type="Primary" name="Action" value="Selection" class="btn-lg mt-3">
+            <abp-button type="submit" button-type="Primary" name="Action" value="Selection" class="mt-3">
                 @L["Continue"]
                 <span class="spinner-box"></span>
             </abp-button>
             <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="btn-lg mt-3">
+                    name="Action" value="Cancel" class="mt-3">
                 @L["Back"]
             </abp-button>
         </div>
@@ -59,12 +59,12 @@ else
         }
 
         <div class="d-grid gap-2">
-            <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-block btn-lg mt-3">
+            <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-block mt-3">
                 @L["Continue"]
                 <span class="spinner-box"></span>
             </abp-button>
             <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="btn-lg mt-3">
+                    name="Action" value="Cancel" class="mt-3">
                 @L["Back"]
             </abp-button>
         </div>
