--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ForgotPassword.cshtml
@@ -30,13 +30,13 @@
                label="@L["DisplayName:Email"].Value" autocomplete="email" />
 
     <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
+        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
             @L["Submit"]
             <span class="spinner-box"></span>
         </abp-button>
 
         <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="btn-lg mt-3">
+                    name="Action" value="Cancel" class="mt-3">
             @L["Back"]
         </abp-button>
     </div>
