--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/Login.cshtml
@@ -155,7 +155,7 @@
 
             <div class="d-grid gap-2">
                 <abp-button type="submit" button-type="Primary" name="Action"
-                    value="Resolution" class="btn-block btn-lg mt-3">
+                    value="Resolution" class="btn-block mt-3">
                     @L["Continue"]
                     <span class="spinner-box">
                     </span>
@@ -217,13 +217,13 @@
                label="@L["DisplayName:Email"].Value" autocomplete="email" />
 
             <div class="d-grid gap-2">
-                <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
+                <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
                     @L["Continue"]
                     <span class="spinner-box">
                     </span>
                 </abp-button>
                 <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="btn-lg mt-3">
+                    name="Action" value="Cancel" class="mt-3">
                     @L["Back"]
                 </abp-button>
             </div>
@@ -242,12 +242,12 @@
                label="@L["DisplayName:UserName"].Value" autocomplete="username" />
 
             <div class="d-grid gap-2">
-                <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
+                <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
                     @L["Continue"]
                     <span class="spinner-box"></span>
                 </abp-button>
                 <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate"
-                    name="Action" value="Cancel" class="btn-lg mt-3">
+                    name="Action" value="Cancel" class="mt-3">
                     @L["Back"]
                 </abp-button>
             </div>
@@ -307,7 +307,7 @@ else
                label="@L["DisplayName:Email"].Value" autocomplete="email" />
 
         <div class="d-grid gap-2">
-            <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
+            <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
                 @L["Continue"]
                 <span class="spinner-box">
                 </span>
