--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/MemberRegister.cshtml
@@ -39,7 +39,7 @@
     <abp-input asp-for="Input.ConfirmPassword" autocomplete="off" />
 
     <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
+        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
             @L["Submit"]
             <span class="spinner-box"></span>
         </abp-button>
