--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterDefineAdmin.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/RegisterDefineAdmin.cshtml
@@ -34,11 +34,11 @@
     <abp-input asp-for="Input.ConfirmPassword" value="@Model.Input.ConfirmPassword" autocomplete="off" auto-focus />
 
     <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
+        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
             @L["Continue"]
             <span class="spinner-box"></span>
         </abp-button>
-        <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate" name="Action" value="Cancel" class="btn-lg mt-3">
+        <abp-button type="submit" button-type="Secondary" formnovalidate="formnovalidate" name="Action" value="Cancel" class="mt-3">
             @L["Back"]
         </abp-button>
     </div>
