--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorSignIn.cshtml
@@ -26,7 +26,7 @@
     <abp-input asp-for="Input.RememberClient" />
     <abp-input asp-for="Input.IsRecoveryCode" />
     <div class="d-grid gap-2">
-        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="btn-lg mt-3">
+        <abp-button type="submit" button-type="Primary" name="Action" value="Input" class="mt-3">
             @L["Submit"]
             <span class="spinner-box"></span>
         </abp-button>
