--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivation.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/EmailActivation.cshtml
@@ -45,7 +45,7 @@ else if (Model.State == EmailActivationModel.ActivationState.Already)
 
     <h5>Your account is ready.</h5>
 
-    <p>YPlease follow the button below to login.</p>
+    <p>Please follow the button below to login.</p>
 }
 else
 {
