Improve reset password page

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/ResetPassword.cshtml
@@ -17,15 +17,34 @@
     @L["ResetPassword"]
 </h4>
 
-<form method="post">
+<div class="alert alert-info">
+    @L["ResetPassword_Information"]
+</div>
 
-    <p>@L["ResetPassword_Information"]</p>
+<form method="post">
 
     <abp-input asp-for="UserId" />
     <abp-input asp-for="ResetToken" />
-    <abp-input asp-for="Password" />
-    <abp-input asp-for="ConfirmPassword" />
-    <a abp-button="Secondary" asp-page="./Login">@L["Cancel"]</a>
-    <abp-button type="submit" button-type="Primary" text="@L["Submit"].Value" />
 
+    <div class="mb-3" id="password-wrapper">
+        <label asp-for="Password" class="form-label"></label>
+        <div class="input-group">
+            <input asp-for="Password" class="form-control" data-auto-focus="true" autocomplete="new-password" />
+            <button type="button" class="toggle-password btn btn-outline-secondary">
+                <i class="toggle-icon fa fa-eye"></i>
+            </button>
+        </div>
+    </div>
+
+    <abp-input asp-for="ConfirmPassword" autocomplete="off" />
+
+    <div class="d-grid gap-2">
+        <abp-button type="submit" button-type="Primary">
+            @L["Submit"]
+            <span class="spinner-box"></span>
+        </abp-button>
+        <a abp-button="Secondary" asp-page="./Login">
+            @L["Cancel"]
+        </a>
+    </div>
 </form>
