Improve two factor page

--- a/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorRequest.cshtml
+++ b/src/PolpAbp.Presentation.Account.Web/Pages/Account/TwoFactorRequest.cshtml
@@ -22,7 +22,7 @@
 </p>
 
 <form method="post" data-ajax="true" data-ajax-method="post" data-ajax-complete="completed">
-    <div class="d-flex gap-2">
+    <div class="d-grid gap-2">
         @{
             foreach (var p in Model.TwoFactorCodeProviders)
             {
